--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET NODE_ENV=development&&nodemon server.js",
+    "start:dev": "SET NODE_ENV=development&&nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "SET NODE_ENV=development&&ndb server.js",
     "watch": "parcel watch ./public/js/index.js --dist-dir ./public/js/bundled/ --no-hmr",
@@ -34,6 +35,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
