--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "string_decoder": "^1.3.0",
     "url": "^0.11.3",
     "vm-browserify": "^1.1.2"
+  },
+  "engines": {
+    "node": "^18.0.0"
   }
 }
